@@ -18,7 +18,6 @@
 package org.photonvision.vision.processes;
 
 import java.util.*;
-import java.util.stream.Collectors;
 import org.photonvision.common.logging.LogGroup;
 import org.photonvision.common.logging.Logger;
 
@@ -67,9 +66,7 @@ public class VisionModuleManager {
         // Big list, which should contain every vision source (currently loaded plus the new ones being
         // added)
         List<Integer> bigList =
-                this.getModules().stream()
-                        .map(it -> it.getCameraConfiguration().streamIndex)
-                        .collect(Collectors.toList());
+                this.getModules().stream().map(it -> it.getCameraConfiguration().streamIndex).toList();
 
         int idx = 0;
         while (bigList.contains(idx)) {
